--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
 
     <!-- <input type="text"> -->
-    <input id="text1" placeholder="Name">
+    <input id="text1" placeholder="Full Name">
     <br>
     <button onclick="reverseFn()" id="btn2">Reverse</button>
     <button onclick="vowelCount()" id="btn3">Vowel Count</button>
